# UCSD_CodeAlong_Cats_Dogs

./: .gitignore  UCSD_Code_Along_Cats_Dogs.ipynb  pyproject.toml
Notebooks/: UCSD_Code_Along_Cats_Dogs.ipynb  UCSD_Code_Along_Img_Aug.ipynb
